<resources>
    <string name="title_activity_bluetooth_scan">Bluetooth Scan</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_export_database">Export database</string>
    <string name="menu_export_csv_sidiary">Export CSV (SiDiary format)</string>
    <string name="menu_import_db">Restore database</string>
    <string name="error_bluetooth_not_supported">Error: Bluetooth not supported by this device</string>
    <string name="unknown_device">Unrecognized Device</string>
    <string name="connecting_to_device">Connecting to device</string>
    <string name="title_activity_raw_data_table">Raw Data Table</string>
    <string name="title_activity_calculated_data_table">Calculated Data Table</string>
    <string name="title_activity_start_new_sensor">Start New Sensor</string>
    <string name="title_activity_new_sensor_location">New Sensor Location</string>
    <string name="title_activity_stop_sensor">Stop Sensor</string>
    <string name="title_activity_nav_drawer">Nav Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_calibration_check_in">Calibration Activity</string>
    <string name="title_activity_usb_connected">USB Connected Activity</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_hint">Snooze alert for x minutes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="pref_sensor_location_dont_ask_again">Don\'t ask me that again</string>
    <string name="title_activity_error">"Error and Event List"</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_fake_numbers">Fake Numbers</string>
    <string name="title_activity_edit_alert">Edit Alert</string>
    <string name="title_activity_double_calibration">Initial Calibration</string>
    <string name="title_activity_calibration_override">Calibration Override</string>
    <string name="pref_header_cloud_storage">Cloud Storage</string>
    <string name="auto_configure_title">Auto configure</string>
    <string name="prefs_auto_config_summary">Auto configure using a barcode.</string>
    <string name="auto_config_cam_title">Camera</string>
    <string name="auto_config_cam_summary">Scan a QR code with your mobile (recommended)</string>
    <string name="auto_config_image_title">Image file</string>
    <string name="auto_config_image_summary">You can save a QR code as an image file (such as .png or .jpeg) on your mobile. Then, use this option to scan the QR code from the saved file.</string>
    <string name="scan_share2_barcode">Scan Share Barcode</string>
    <string name="pref_share2_scan_barcode_summary">Or scan the barcode on the share receiver</string>
    <string name="pref_title_mongodb">MongoDB</string>
    <string name="pref_summary_mongodb_enabled">Direct database upload, not recommended for Nightscout</string>
    <string name="pref_title_mongodb_uri">URI</string>
    <string name="pref_dialog_mongodb_uri">Enter MongoDB URI"</string>
    <string name="pref_message_mongodb_uri">Replace example values in {}\'s with your correct values</string>
    <string name="pref_default_mongodb_uri">mongodb://{user}:{password}@{host}.mongolab.com:{11111}/{database}</string>
    <string name="pref_title_mongodb_collection">Collection name</string>
    <string name="pref_dialog_mongodb_collection">Enter collection name</string>
    <string name="pref_message_mongodb_collection">This is the name of the collection where the CGM data will be stored</string>
    <string name="pref_title_mongodb_device_status_collection">Device Status collection name</string>
    <string name="pref_dialog_mongodb_device_status_collection">Enter Device Status collection name"</string>
    <string name="pref_message_mongodb_device_status_collection">This is the name of the collection where the battery and other device data will be stored</string>
    <string name="pref_title_api">Nightscout Sync (REST-API)</string>
    <string name="pref_title_api_enabled">Enabled</string>
    <string name="pref_summary_api_enabled">The REST API is the standard way to connect to Nightscout</string>
    <string name="pref_title_api_url">Base URL</string>
    <string name="pref_summary_api_url">Format: https://password@hostname/api/v1/</string>
    <string name="pref_dialog_api_url">Enter Base API URL</string>
    <string name="pref_message_api_url">This only the base URL, the uploader will automatically append /entries for the POST.  API_SECRET on the server should match yourpassphrase in this setting.</string>
    <string name="pref_default_api_url">https://yourpassphrase@{YOUR-SITE}.azurewebsites.net/api/v1/</string>
    <string name="wifi_recievers_dialog_message">Comma separated list of IP:port (for example 37.142.132.220:50005,37.142.132.220:50010,mongodb://user:pass@ds053958.mongolab.com:53958/db/collection)</string>
    <string name="wifi_recievers_dialog_title">Enter IP addresses and ports of receivers (including mongodb addresses if needed)</string>
    <string name="location_not_found_title">Location Is Not Enabled</string>
    <string name="location_not_found_message">For Bluetooth discovery to work on newer devices, location must be enabled. xDrip does not track your location except with the optional Emergency Message feature</string>
    <string name="location_yes">Enable</string>
    <string name="pref_title_broadcast_enabled">Broadcast locally</string>
    <string name="pref_summary_broadcast_enabled">Enable local broadcast of data so other apps (e.g. NightWatch) can listen on new values</string>
    <string name="title_activity_share_test">Share Test</string>
    <string name="pref_pebble_trend_watchface">Use Pebble Trend Watchface</string>
    <string name="pref_summary_pebble_trend_watchface">Use/install Pebble Trend Watchface (experimental)</string>
    <string name="pref_pebble_display_trend">Display Trend</string>
    <string name="pref_summary_display_trend">Show the BG trend on the xDrip Pebble watch face.</string>
    <string name="pref_pebble_display_high_line">Display High Line</string>
    <string name="pref_pebble_display_low_line">Display Low Line</string>
    <string name="amazfit_sync_service">AmazFit Sync Service</string>
    <string name="pref_amazfit_enable_summary">Enable Amazfit Data support</string>
    <string name="pref_amazfit_enable">Enable</string>
    <string name="pref_amazfit_tile">Amazfit Service</string>
    <string name="pref_amazfit_BG_alert_enable_summary">Sends active BG Alerts to smartwatch</string>
    <string name="pref_amazfit_BG_alert_enable">Enable</string>
    <string name="pref_amazfit_BG_alert_title">BG Alerts</string>
    <string name="pref_amazfit_other_alert_enable_summary">Sends other alerts to smartwatch</string>
    <string name="pref_amazfit_other_alert_enable">Enable</string>
    <string name="pref_amazfit_other_alert_title">Other Alerts</string>
    <string name="pref_amazfit_watchface_graph_dots_title">Watchface Graph Dots</string>
    <string name="pref_amazfit_watchface_graph_dots_summary">Shows tiny dots instead of small</string>
    <string name="pref_amazfit_watchface_graph_enable">Enable</string>
    <string name="pref_amazfit_watchface_graph_title">Watchface Graph</string>
    <string name="pref_amazfit_watchface_graph_enable_summary">Shows graph in watchfaces background</string>
    <string name="pref_amazfit_watchface_graph_hours_title">Watchface Graph</string>
    <string name="pref_amazfit_watchface_graph_hours_summary">set how many hours in graph</string>
    <string name="pref_amazfit_widget_graph_hours_title">Widget Graph</string>
    <string name="pref_amazfit_widget_graph_hours_summary">set how many hours in graph</string>
    <string name="pref_amazfit_widget_graph_dots_title">Widget Graph Dots</string>
    <string name="pref_amazfit_widget_graph_dots_summary">Shows tiny dots instead of small</string>
    <string name="pref_amazfit_widget_graph_enable">Enable</string>
    <string name="pref_amazfit_widget_graph_title">Widget Graph</string>
    <string name="glucose_units">Glucose Units</string>
    <string name="mmol_or_mgdl_high_and_low">mmol/l or mg/dl high and low</string>
    <string name="general_settings">General Settings</string>
    <string name="high_value">High Value</string>
    <string name="low_value">Low Value</string>
    <string name="glucose_drop_for_one_unit">Glucose drop for 1 Unit</string>
    <string name="grams_of_carbohydrate_one_unit_covers">Grams of Carbohydrate 1 Unit covers</string>
    <string name="hardware_data_source">Hardware Data Source</string>
    <string name="enter_ten_character_dexcom_receiver_serial">Enter 10-character Dexcom Receiver serial number</string>
    <string name="dexcom_transmitter_id">Dexcom Transmitter ID</string>
    <string name="run_collector_in_foreground">Run Collector in foreground</string>
    <string name="shows_a_persistent_notification">Shows a persistent notification graph, visible on lock-screen and prevents Android killing the service.</string>
    <string name="list_of_receivers">List of receivers</string>
    <string name="data_source_settings">Data Source Settings</string>
    <string name="dexcom_share_server_upload">Dex Share</string>
    <string name="upload_data_to_dex_servers">Upload data to Dex Share Servers</string>
    <string name="manage_followers">Manage Followers</string>
    <string name="manage_existing_followers">Manage your existing followers and invite new ones.</string>
    <string name="done">Done</string>
    <string name="in_order_to_get_started_please_perform_two_finger">In order to get started, please perform one or two finger prick tests and enter the values here!</string>
    <string name="enter_first_bg_value">Enter First BG Value</string>
    <string name="enter_second_bg_value">Enter Second BG Value</string>
    <string name="search">Search</string>
    <string name="reset_all_language_data">Reset ALL language data</string>
    <string name="show_only_customized_entries">Show only customized entries</string>
    <string name="close_gatt_on_ble_disconnect">Close GATT on BLE disconnect</string>
    <string name="short_off_text_for_switches">OFF</string>
    <string name="short_on_text_for_switches">ON</string>
    <string name="maximum_value">The maximum value you consider to be in range.</string>
    <string name="minimum_value">The minimum value you consider to be in range.</string>
    <string name="carb_ratio">Carb Ratio</string>
    <string name="insulin_sensitivity">Insulin Sensitivity</string>
    <string name="force_english_text">Force English Text</string>
    <string name="using_local_language">Currently using your device\'s local language</string>
    <string name="forcing_alternate_language">Currently forcing use of alternate language</string>
    <string name="need_alternate_language">If you need an alternate language translation within xDrip</string>
    <string name="chosse_language">Choose a specific language</string>
    <string name="show_only_untranslated">Show only untranslated</string>
    <string name="enable_streaming_dialog_yes">Connect to this Libre2 sensor</string>
    <string name="enable_streaming_dialog_no">Don\'t connect to this Libre2 sensor </string>
    <string name="enable_streaming_dialog_text">Do you want to connect xDrip with this sensor? This will stop Libre reader and LibreLink from receiving alerts. Press yes and scan again to connect (choose don\'t connect if you want to run xDrip with the patched app)</string>
    <string name="enable_streaming_dialog_title">Connecting Libre sensor to Bluetooth</string>
</resources>