<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="collection_category"
        android:title="@string/data_source_settings">

        <ListPreference
            android:key="dex_collection_method"
            android:title="@string/hardware_data_source"
            android:summary="How are you going to receive data from your Dexcom/Transmitter?"
            android:entries="@array/DexCollectionMethods"
            android:entryValues="@array/DexCollectionMethodValues"
            android:defaultValue="BluetoothWixel"/>
        <EditTextPreference
            android:title="@string/enter_ten_character_dexcom_receiver_serial"
            android:key="share_key"
            android:shouldDisableView="true"
            android:defaultValue="SM00000000"/>
        <PreferenceScreen
            android:title="@string/scan_share2_barcode"
            android:key="scan_share2_barcode"
            android:shouldDisableView="true"
            android:summary="@string/pref_share2_scan_barcode_summary" />

        <EditTextPreference
            android:key="dex_txid"
            android:title="@string/dexcom_transmitter_id"
            android:summary="ID of your Dexcom Transmitter, eg 12AB3"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="textNoSuggestions|textVisiblePassword|textCapCharacters"
            android:defaultValue="ABCDEF" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="close_gatt_on_ble_disconnect"
            android:summary="Close GATT on BLE disconnect"
            android:title="@string/close_gatt_on_ble_disconnect" />


        <CheckBoxPreference
            android:key="run_service_in_foreground"
            android:title="@string/run_collector_in_foreground"
            android:summary="@string/shows_a_persistent_notification"
            android:defaultValue="false" />

        <EditTextPreference
            android:title="@string/list_of_receivers"
            android:key="wifi_recievers_addresses"
            android:dialogTitle="@string/wifi_recievers_dialog_title"
            android:dialogMessage="@string/wifi_recievers_dialog_message"
            android:defaultValue=""
            android:inputType="textUri">
        </EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>
