<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="xdrip_units_settings"
        android:summary="@string/mmol_or_mgdl_high_and_low"
        android:icon="@drawable/ic_ruler_grey600_48dp"
        android:title="@string/glucose_units">
        <PreferenceCategory
            android:title="@string/general_settings"
            android:key="bgRange">
            <ListPreference
                android:key="units"
                android:title="@string/glucose_units"
                android:entries="@array/bgUnitEntries"
                android:entryValues="@array/bgUnitValues"
                android:defaultValue="mgdl"/>
            <EditTextPreference
                android:key="veryhighValue"
                android:title="@string/veryhigh_value"
                android:inputType="numberDecimal"
                android:summary="@string/maximum_value"
                android:defaultValue="250" />
            <EditTextPreference
                android:key="highValue"
                android:title="@string/high_value"
                android:inputType="numberDecimal"
                android:summary="@string/maximum_value"
                android:defaultValue="170" />
            <EditTextPreference
                android:key="lowValue"
                android:title="@string/low_value"
                android:inputType="numberDecimal"
                android:summary="@string/minimum_value"
                android:defaultValue="70" />
            <EditTextPreference
                android:key="verylowValue"
                android:title="@string/verylow_value"
                android:inputType="numberDecimal"
                android:summary="@string/minimum_value"
                android:defaultValue="54" />
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>
